update tot the code

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
   <body style="margin: 0px">
     <div id="spinner" class="container">
       <!-- <div class="loading"></div> -->
-      <img src="./src/images/preloader/ripple.gif" />
+      <img
+        src="https://res.cloudinary.com/ndwestern/image/upload/v1658605876/NDWESTERN-MEDIA/images/preloader/ripple_qyerxb.gif"
+      />
     </div>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
